[tool.poetry]
name = "langgraph-supervisor-py"
version = "0.1.0"
description = ""
authors = ["BRODIN Camille <camille.brodin@lyon.unicancer.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langgraph-supervisor = "^0.0.31"
langchain-openai = "^1.1.7"
langchain = "^1.2.4"
langchain-ollama = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
